--- a/dashboard.html
+++ b/dashboard.html
@@ -10,7 +10,7 @@
 
     <div class="container">
         <h2>Upload Your Final Project</h2>
-        <form action="/upload_final_project" method="post" enctype="multipart/form-data">
+        <form action="" method="post" enctype="multipart/form-data">
             <label for="finalProject">Choose a file:</label>
             <input type="file" id="finalProject" name="finalProject" accept=".pdf,.doc,.docx,.zip">
             <input type="submit" value="Upload">
@@ -19,7 +19,7 @@
 
     <div class="container">    
         <h2>Upload Your Weekly Report</h2>
-        <form action="/upload_weekly_report" method="post" enctype="multipart/form-data">
+        <form action="" method="post" enctype="multipart/form-data">
             <label for="weeklyReport">Choose a file:</label>
             <input type="file" id="weeklyReport" name="weeklyReport" accept=".pdf,.doc,.docx">
             <input type="submit" value="Upload">
