Finished the project. Hooray

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>DRSRS.HOME</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body style="background-image: url(pupils.jpg);"> 
+<body style="background-image: url(indexbackground.png);"> 
     
     <div class="container">
-        <h2>DRSRS ATTACHEE SYSTEM</h2>
+        <h2>ATTACHE'S REPOSITORY.</h2>
         <button onclick="location.href='register.html'">Register</button>
         <button onclick="location.href='login.html'">Login</button>
     </div>
