--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 <body style="background-image: url(indexbackground.png);"> 
     
     <div class="container">
-        <h2>ATTACHE'S REPOSITORY.</h2>
+        <h2>WELCOME TO ATTACHE'S REPOSITORY.</h2>
+        <h5 style="text-align: center; align-items: center;">Choose how to proceed:</h5><br>
         <button onclick="location.href='register.html'">Register</button>
+        <br>
+        <br>
         <button onclick="location.href='login.html'">Login</button>
     </div>
 </body>
