--- a/login.html
+++ b/login.html
@@ -20,6 +20,8 @@
             </div>
             <button type="submit">Login</button>
         </form>
+        <br>
+        <a href="register.html" style="text-align: center; justify-content: center; align-items: center;">Register</a>
     </div>
     <script src="script.js"></script>
 </body>
